--- a/Algo_Project.vcxproj.filters
+++ b/Algo_Project.vcxproj.filters
@@ -55,5 +55,8 @@
     <ClInclude Include="matplotlibcpp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MinPriorityQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
